tests/positive/StdlibImport/A.juvix
module A;

type Foo := bar : Foo;

open Foo using {bar} public;
